refactor: replace ctor of Locale with Locale.of and simplify Arrays.asList